--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -31,13 +31,42 @@ html {
     color: white;
 }
 
-.App-link {
-    color: #61dafb;
+.form-container {
+    display: flex;
+    flex-direction: column;
+
+    margin: 0 auto;
+
+    width: 80%;
 }
 
-.form-container {
-    form {
-        display: flex;
-        flex-direction: column;
-    }
+.container {
+    border: 1px solid white;
+    width: 40rem;
+    height: 60rem;
+}
+
+.button,
+.input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    text-transform: capitalize;
+
+    border: none;
+    border-radius: 0.5rem;
+
+    height: 4rem;
+}
+
+.button-home {
+    width: 8rem;
+
+    margin: 2rem 0 0 2rem;
+}
+
+.input,
+.label {
+    margin-bottom: 2rem;
 }
