--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -16,16 +16,7 @@ button {
     cursor: pointer;
 }
 
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-.App-header {
+.app-contents {
     background-color: hsl(220, 13%, 18%);
     min-height: 100vh;
     display: flex;
